tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-trait-impl.diagnostic
diagnostic error code=T0001 family=type message="duplicate impl of trait 'std::Iterable' for Bag" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/traits/errors/duplicate-trait-impl.ari" display="tests/cases/traits/errors/duplicate-trait-impl.ari" bytes=113
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/duplicate-trait-impl.ari" line=7 column=6 end_line=7 end_column=14 byte_start=53 byte_end=61 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/duplicate-trait-impl.ari:7:6\n   |\n 7 | impl Iterable[i64] for Bag {\n   |      ^^^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/traits/errors/duplicate-trait-impl.ari" line=4 column=6 end_line=4 end_column=14 byte_start=21 byte_end=29 message="previous impl of trait 'std::Iterable' for Bag"
  Snippet label=1 text="  --> tests/cases/traits/errors/duplicate-trait-impl.ari:4:6\n   |\n 4 | impl Iterable[i64] for Bag {\n   |      ^^^^^^^^"
  Note index=0 location=none message="previous declaration is shown as a secondary label"
  Help index=0 location=none message="merge the impl methods or remove one of the duplicate impl blocks"
